Updated .gitignore to ignore all files in /bin.

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ Makefile*
 # QtCtreator CMake
 CMakeLists.txt.user
 
+bin/**
 bin/.qmake.stash
 bin/object_script.Qube2D.Debug
 bin/object_script.Qube2D.Release
